--- a/README.org
+++ b/README.org
@@ -1,3 +1,23 @@
+
+
+* Toy Language
+#+BEGIN_SRC c
+func cos(Double) Double;
+func printf(...) Integer;
+
+func bar() Integer {
+   printf("foo");
+   return 3;
+}
+
+func main() Integer {
+    printf("hello %d", 3);
+    printf("bar ");
+    bar();
+    return 0;
+}
+#+END_SRC
+
 * Screenshot
 
 [[https://github.com/jasonjckn/llvm-clojure-bindings/raw/master/pic.png]]
