--- a/README.org
+++ b/README.org
@@ -2,8 +2,8 @@
 
 * How to Run
 1) Install LLVM library. 
-   + The code assumes its /opt/local/lib/libLLVM-2.9.dylib
-   + For different paths, update jna.library.path java property.
+     The code assumes its /opt/local/lib/libLLVM-2.9.dylib
+     For different paths, update jna.library.path java property.
 2) lein deps
 3) lein run
 
