--- a/README.org
+++ b/README.org
@@ -1,11 +1,11 @@
 
 
 * How to Run
-1) Install LLVM library. 
-     The code assumes its /opt/local/lib/libLLVM-2.9.dylib
-     For different paths, update jna.library.path java property.
+1) Install LLVM library.
 2) lein deps
 3) lein run
+
+NOTE: The code assumes LLVM is at /opt/local/lib/libLLVM-2.9.dylib For different paths, update jna.library.path java property.
 
 * Input Program 
 Here our toy language is used as input into compiler frontend.
