--- a/README.org
+++ b/README.org
@@ -41,12 +41,11 @@ func main() Integer {
 
 
 * How does it work?
-+ parser.clj uses a combinator parser and constructs IR#1
-+ llvm.clj contains needed llvm bindings for clojure.
-+ native.clj is like clj-native, but less efficient. (I couldn't get arrays of pointers working in clj-native.)
-+ parser.clj is for transforming Input=>IR#1
++ parser.clj is for transforming Input=>IR#1 (using clarsec, a combinator parser)
 + ast.clj is for transforming IR#1=>IR#2
 + main.clj is for IR#2=>object file=>linking.
++ llvm.clj contains needed llvm bindings for clojure.
++ native.clj is like clj-native, but less efficient. (I couldn't get arrays of pointers working in clj-native.)
 
 If input program is this:
 #+BEGIN_SRC
