--- a/README.org
+++ b/README.org
@@ -41,7 +41,7 @@ func main() Integer {
 
 
 * How does it work?
-+ parser.clj is for transforming Input=>IR#1 (using clarsec, a combinator parser)
++ parser.clj is for transforming Input=>AST (using clarsec, a combinator parser)
 + ast.clj is for transforming AST=>LLVM IR
 + main.clj is for LLVM IR=>object file=>linking.
 + llvm.clj contains needed llvm bindings for clojure.
